# pygeonlp-webapi

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  base_data  docker-compose.yml  setup.cfg
Docker/: entrypoint.sh  init.py  runscript.py
doc/: getGeoInfo.rst  index.rst  install.rst  option_add_dic.rst  option_geo_contains.rst  option_geo_disjoint.rst  option_geocoding.rst  option_set_dic.rst  option_time_after.rst  option_time_exists.rst  option_time_overlaps.rst
doc/json/: test_addressGeocoding_res.json  test_getDictionaries_res.json  test_getDictionaryInfo_req.json  test_getDictionaryInfo_res.json  test_getGeoInfo_idlist_req.json  test_getGeoInfo_idlist_res.json  test_parseStructured_res.json  test_parse_geo_contains_res.json  test_parse_geo_disjoint_res.json  test_parse_geocoding_req.json  test_parse_geocoding_res.json  test_parse_res.json
docs/source/: conf.py  install.rst  option_remove_dic.rst  option_set_class.rst  option_time_before.rst  option_time_covers.rst  run_docker.rst  run_server.rst  webapi_addressGeocoding.rst  webapi_getDictionaries.rst  webapi_getDictionaryInfo.rst
pygeonlp_webapi/: app.py
pygeonlp_webapi/config/: default.py
tests/: conftest.py  helpers.py  test_api.py
