[metadata]
name = pygeonlp_webapi
version = 1.2.0
url = https://github.com/geonlp-platform/pygeonlp-webapi
download_url = https://github.com/geonlp-platform/pygeonlp-webapi
author = GeoNLP Project Team
author_email = geonlp@nii.ac.jp
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD-2-Clause
license_file = LICENSE
description = Pygeonlp WebAPI Server
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    geonlp
    webapi
    server
    json-rpc

[options]
packages =
    pygeonlp_webapi
    pygeonlp_webapi.config
install_requires =
    pygeonlp>=1.2.0
    flask-jsonrpc
